Check for spawnable spaces